# svfusion

./: CUVS_VERSION  README.md  rapids_config.cmake
examples/: CMakeLists.txt  test_consumer.sh  test_producer.sh
examples/proto/: streaming_messages.proto
examples/runbooks/: streaming_test.yaml
examples/src/: benchmark.cu  check_gpu.cu  datasets.hpp  ffanns_example.cu  multi_stream_search_pool.hpp  old_benchmark.cu  streaming_consumer_main.cu  streaming_consumer_manager.hpp  streaming_consumer_manager_kafka.inl  streaming_consumer_manager_stats.inl  streaming_producer.hpp  streaming_producer_main.cu  streaming_utils.hpp  utils.hpp  workload_manager.cu  workload_manager.hpp
lib/: CMakeLists.txt  count_line.sh
lib/cmake/modules/: ConfigureCUDA.cmake
lib/include/ffanns/cluster/: kmeans.hpp
lib/include/ffanns/core/: bitset.hpp  host_distance.hpp
lib/include/ffanns/distance/: distance.h  distance.hpp
lib/include/ffanns/neighbors/: brute_force.hpp  cagra.hpp  cagra_async.hpp  common.hpp  hd_mapper.hpp  nn_descent.hpp
lib/include/ffanns/selection/: select_k.hpp
lib/src/cluster/: kmeans_balanced.cuh  kmeans_balanced_fit_float.cu
lib/src/cluster/detail/: kmeans_balanced.cuh  kmeans_common.cuh
lib/src/core/: bitset.cu  nvtx.hpp
lib/src/distance/: distance-ext.cuh  distance-inl.cuh  distance.cu  fused_distance_nn-inl.cuh  fused_distance_nn_helpers.cuh  pairwise_distance.cu
lib/src/distance/detail/: distance.cuh  fused_distance_nn.cu  fused_distance_nn.cuh  pairwise_distance_base.cuh  pairwise_distance_cutlass_base.cuh  pairwise_distance_epilogue.h  pairwise_distance_epilogue_elementwise.h  pairwise_distance_gemm.h  predicated_tile_iterator_normvec.h
lib/src/distance/detail/distance_ops/: all_ops.cuh  cutlass.cuh  l2_exp.cuh
lib/src/distance/detail/fused_distance_nn/: custom_epilogue_with_broadcast.h  cutlass_base.cuh  epilogue.cuh  epilogue_elementwise.cuh  fused_l2_nn.cuh  gemm.h  helper_structs.cuh  persistent_gemm.h  predicated_tile_iterator_normvec_smem.h  predicated_tile_iterator_reduced_vec.h  simt_kernel.cuh
lib/src/distance/detail/pairwise_matrix/: dispatch-ext.cuh  dispatch-inl.cuh  dispatch_l2_expanded_float_float_float_int.cu  dispatch_l2_expanded_float_float_float_int64_t.cu  dispatch_layout.cuh  dispatch_sm80.cuh  params.cuh
lib/src/neighbors/: brute_force.cu  cagra.cuh  cagra_build_float.cu  cagra_build_uint8.cu  cagra_delete.cuh  cagra_delete_float.cu  cagra_delete_uint8.cu  cagra_extend_float.cu  cagra_extend_uint8.cu  cagra_search_float.cu  cagra_search_uint8.cu  cagra_serialize.cuh  cagra_serialize_float.cu  nn_descent.cuh  nn_descent_float.cu  sample_filter.cu  sample_filter.cuh
lib/src/neighbors/detail/: ann_utils.cuh  dataset_serialize.hpp  faiss_distance_utils.h  fused_l2_knn.cuh  knn_brute_force.cuh  knn_merge_parts.cuh  nn_descent.cuh  nn_descent_batch.cuh
lib/src/neighbors/detail/cagra/: add_nodes.cuh  bitonic.hpp  cagra_build.cuh  cagra_delete.cuh  cagra_search.cuh  cagra_serialize.cuh  compute_distance-ext.cuh  compute_distance.cu  compute_distance.hpp  compute_distance_00_generate.py  compute_distance_standard-impl.cuh  compute_distance_standard.hpp  compute_distance_standard_InnerProduct_float_uint32_dim128_t8.cu  compute_distance_standard_InnerProduct_float_uint32_dim256_t16.cu  compute_distance_standard_InnerProduct_float_uint32_dim512_t32.cu  compute_distance_standard_InnerProduct_uint8_uint32_dim128_t8.cu  compute_distance_standard_InnerProduct_uint8_uint32_dim256_t16.cu  compute_distance_standard_InnerProduct_uint8_uint32_dim512_t32.cu  compute_distance_standard_L2Expanded_float_uint32_dim128_t8.cu  compute_distance_standard_L2Expanded_float_uint32_dim256_t16.cu  compute_distance_standard_L2Expanded_float_uint32_dim512_t32.cu  compute_distance_standard_L2Expanded_uint8_uint32_dim128_t8.cu  compute_distance_standard_L2Expanded_uint8_uint32_dim256_t16.cu  compute_distance_standard_L2Expanded_uint8_uint32_dim512_t32.cu  device_common.hpp  factory.cuh  graph_core.cuh  hashmap.hpp  sample_filter_utils.cuh  search_multi_cta.cuh  search_multi_kernel.cuh  search_multi_kernel_bak.cuh  search_plan.cuh  search_single_cta.cuh  search_single_cta_00_generate.py  search_single_cta_float_uint32.cu  search_single_cta_inst.cuh  search_single_cta_kernel-inl.cuh  search_single_cta_kernel.cuh  search_utils.hpp  (+2 more)
lib/src/neighbors/detail/cagra/topk_for_cagra/: topk.cu  topk.h  topk_core.cuh
lib/src/selection/: select_k.cuh
results/: access_pattern.ipynb  draw_fig.py  miss_fig.py  transform.py
streaming_anns/: data_export.py  requirements.txt
streaming_anns/baselines/diskann/: config.yaml  diskann-str.py
streaming_anns/benchmark/: common.py  create_dataset.py  dataset_io.py  datasets.py  main.py  results.py  runner.py
streaming_anns/benchmark/algorithms/: definitions.py
streaming_anns/benchmark/plotting/: metrics.py  utils.py
streaming_anns/benchmark/streaming/: compute_gt.py  load_runbook.py
streaming_anns/runbooks/: delete.yaml  delete1M.yaml  generate_large_runbook.py  generate_runbook.py  sift1B_large.yaml  test.yaml  test1M.yaml
